bootcamp-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootcamp
  labels:
    app: bootcamp-devployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bootcamp
  template:
    metadata:
      labels:
        app: bootcamp
    spec:
      containers:
        - name: bootcamp
          image: jocatalin/kubernetes-bootcamp:v2
          ports:
            - containerPort: 8080
