bootcamp-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: bootcamp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
