bootcamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bootcamp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubernetes.app.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: service
                port:
                  number: 80
